# csaund

./: CMakeLists.txt  macros.h  main.c  wav.c  wav.h
primitives/: instrument.c  instrument.h  storage.c  storage.h
synth/: detached.c  detached.h  math.c  math.h  piano.c  piano.h  pipeline.h
